--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,14 @@
     <header>
         {% include header.html %}
     </header>
-    {{ content }} 
+    <hr>
+    <div class="navbar">
+        <a href="/">Home</a>
+        <a href="/about">About</a>
+    </div>
+
+    <hr>
+    {{ content }}
     <footer>
         {% include footer.html %}
     </footer>
